--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.16.4",
+    "@mui/material": "^5.16.4",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "antd": "^5.19.3",
+    "framer-motion": "^11.3.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
+    "react-router-hash-link": "^2.4.3",
+    "styled-components": "^6.1.12",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
