--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
     "react-router-hash-link": "^2.4.3",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.5"
   },
